# Object_Oriented_Programming

./: .gitignore  README.md
Additionals/For Control 1/: Group.cpp  Group.hpp  Person.cpp  Person.hpp  test.cpp
Additionals/For Control 2/: README.md  Tasks.md
Additionals/Third party libraries/: README.md
Exam solutions/: task01.cpp  task02.cpp
Hristo's Notes/Exam/: CalcDefn.cpp  CalcDefn.h  ParamDefn.cpp  ParamDefn.h  SimpleDefn.cpp  SimpleDefn.h  main.cpp  string.cpp  string.h
Practicum/Bonus/Cmake/VehicleWorld/: CMakeLists.txt  main.cpp
Practicum/Bonus/Cmake/VehicleWorld/Headers/: garage.h  utils.h  vehicle.h  vehicleCollection.h  vehicleWorld.h
Practicum/Bonus/Cmake/VehicleWorld/Source/: garage.cpp  myString.cpp  utils.cpp  vehicle.cpp  vehicleCollection.cpp  vehicleWorld.cpp
Practicum/Bonus/Cmake/VehicleWorld/Tests/: garage_Tests.cpp  myString_Tests.cpp  vehicleCollection_Tests.cpp  vehicle_Tests.cpp
Seminar/Week 01/: README.md
Seminar/Week 02/: README.md  array_of_students_read.cpp  array_of_students_write.cpp  fileStreams.md  simple_struct_binary.cpp  students.csv  students_dynamicName_to_binary.cpp  students_staticName_to_binary.cpp
Seminar/Week 03/: README.md
Seminar/Week 04/: Athlete.cpp  README.md  Task1_structure.cpp  Task2_structure.cpp  Task3_structure.cpp  Task4_structure.cpp
Seminar/Week 05/: MultipleFileCompilation.md  README.md
Seminar/Week 06/: README.md
Seminar/Week 07/: README.md
Seminar/Week 08/: README.md  test.cpp
Seminar/Week 09/: README.md
Seminar/Week 10/: README.md
Seminar/Week 11/: README.md
(+428 files in other folders)
